--- a/App_Themes/main/main.css
+++ b/App_Themes/main/main.css
@@ -1,10 +1,13 @@
 ﻿@import "../../css/reset.css";
 
-body
+html, body
 {
     font-family:Verdana;
-    font-size:18px;    
+    font-size:18px;  
+    line-height:24px;  
     color:#000;
+    min-height:100%;
+    position:relative;
 }
 p
 {
@@ -49,6 +52,7 @@ a
 {
     width:960px;
     margin:0 auto;    
+    padding-bottom:119px;
 }
 #footer_wrapper
 {
@@ -57,6 +61,9 @@ a
     padding:30px 0px;
     color:#fff;
     font-size:14px;    
+    margin-top:30px;
+    position:absolute;
+    width:100%;
 }
 #footer
 {
@@ -65,6 +72,7 @@ a
     height:39px;
     margin: 0 auto;
     padding-top:10px;
+    bottom:0px;    
 }
 .col2
 {
@@ -112,7 +120,7 @@ a
     background: -ms-linear-gradient(-45deg, #f1da36 0%,#fefcea 100%); /* IE10+ */
     background: linear-gradient(135deg, #f1da36 0%,#fefcea 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1da36', endColorstr='#fefcea',GradientType=1 ); /* IE6-8 fallback on horizontal gradient */
-    padding:45px 25px 20px;    
+    padding:65px 25px 20px;    
     margin-top:-36px;
     overflow:hidden;
 }
@@ -155,4 +163,98 @@ div.title
 {
     margin-left:auto;
     margin-right:auto;
+}
+.mt20
+{
+    margin-top:20px;
+}
+label
+{
+    display:block;
+    text-transform:uppercase;
+    width:100%;
+}
+.reprint_label
+{
+    float: right;
+    padding-right: 15px;
+    position: relative;
+    top: -2px;
+    width: 90%;
+    text-transform:none;
+}
+.clear
+{
+    clear:both;
+}
+.pr40
+{
+    padding-right:40px;
+}
+.large_input
+{
+    width:95%;
+    height:25px;
+    margin-bottom:10px;
+}
+.middle_input
+{
+    width:44%;
+    height:25px;
+    margin-bottom:10px;
+}
+.small_input
+{
+    width:20%;
+    height:25px;
+    margin-bottom:10px;
+}
+.small_select
+{
+    width:22%;
+    height:30px;
+    padding:5px;
+}
+.large_select
+{
+    width:96%;
+    height:30px;
+    padding:5px;
+    margin-top:30px;
+}
+.position_r
+{
+    position:relative;
+}
+.position_r span
+{
+    color:Red;
+    position:absolute;
+    top:0px;
+    right:4%;
+    font-size:11px;
+    display:block;
+}
+.col3
+{
+    width:32%;
+    margin-right:1%;
+}
+.resert_input_width input, .resert_input_width select
+{
+    width:90%;
+}
+ul.bullet li
+{
+    list-style:disc;
+    font-weight:normal;
+}
+
+@media only screen and (max-width: 1599px) {
+  /* rules that only apply for canvases narrower than 1600px */
+  #header
+  {
+      width:960px;
+      background-position:-320px 0px;
+  }
 }
