--- a/MasterPage.master
+++ b/MasterPage.master
@@ -12,29 +12,28 @@
         }
       </style>
     <![endif]-->
+    <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="main_wrapper">
-        <div id="header">
-            <div id="header_content">            
-                <img src="App_Themes/main/images/logo.png" alt="Carite" />
-                <h1>
-                    <strong>Business Card</strong> Ordering
-                </h1>
-            </div>
+    <div id="header">
+        <div id="header_content">
+            <a href="Default.aspx"><img src="App_Themes/main/images/logo.png" alt="Carite" /></a>
+            <h1>
+                <strong>Business Card</strong> Ordering
+            </h1>
         </div>
-        <div id="content_wrapper">
-            <div id="content_header">
-                <asp:ContentPlaceHolder id="ContentPlaceHolderHeader" runat="server"></asp:ContentPlaceHolder>            
-            </div>
-            <div id="content_section">
-                <asp:ContentPlaceHolder id="ContentPlaceHolderSection" runat="server"></asp:ContentPlaceHolder>
-            </div>
+    </div>
+    <div id="content_wrapper">
+        <div id="content_header">
+            <asp:ContentPlaceHolder id="ContentPlaceHolderHeader" runat="server"></asp:ContentPlaceHolder>            
         </div>
-        <div id="footer_wrapper">
-            <div id="footer">
-                &copy; 2013 Carite All Rights Reserved
-            </div>
+        <div id="content_section">
+            <asp:ContentPlaceHolder id="ContentPlaceHolderSection" runat="server"></asp:ContentPlaceHolder>
+        </div>
+    </div>
+    <div id="footer_wrapper">
+        <div id="footer">
+            &copy; 2013 Carite All Rights Reserved
         </div>
     </div>
 </body>
